[package]
name = "streamin-conv"
version = "0.1.0"
authors = ["davma"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.2"
serde = "*"
futures = "*"
serde_json = "1.0.57"
serde_yaml = "0.8.13"
rayon = "1.4.0"
config = "0.10.1"
lazy_static = "*"
base64 = "0.12.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
evmap = "10.0"
derive_more = "0.99.10"
log = "0.4"
env_logger = "0.7"
tokio = { version = "*", features = ["process", "blocking"] }

[dev-dependencies]
actix-rt = "*"